--- a/src/app/components/form-dialog/form-dialog.component.html
+++ b/src/app/components/form-dialog/form-dialog.component.html
@@ -80,6 +80,10 @@
   </div>
 
   <div class="footer-buttons">
+    <button mat-raised-button class="my-2" (click)="closeModal()">
+      Cancelar
+    </button>
+
     <button mat-raised-button color="primary" class="my-2" (click)="saveForm()">
       Guardar
     </button>
