--- a/src/app/components/main-feed/main-feed.component.scss
+++ b/src/app/components/main-feed/main-feed.component.scss
@@ -4,4 +4,10 @@
   font-size: 20px;
   padding: 50px;
   height: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.btn {
+  margin-top: -12px;
 }
