--- a/src/app/components/form-dialog/form-dialog.component.html
+++ b/src/app/components/form-dialog/form-dialog.component.html
@@ -79,7 +79,7 @@
     </div>
   </div>
 
-  <div class="footer-buttons">
+  <div class="footer-buttons" *ngIf="true">
     <button mat-raised-button class="my-2" (click)="closeModal()">
       Cancelar
     </button>
